--- a/src/style.css
+++ b/src/style.css
@@ -34,7 +34,9 @@ h1 {
   font-size: 3.2em;
   line-height: 1.1;
 }
-
+.aside{
+  height: 100vh;
+}
 button {
   border-radius: 8px;
   border: 1px solid transparent;
@@ -63,10 +65,15 @@ button:focus-visible {
 
 #app {
   width: 100%;
+  height: 776px;
+}
+.container {
+  width: 100%;
+  height: 776px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* padding: 2rem; */
+  justify-content: center; /* 水平方向居中 */
 }
 
 @media (prefers-color-scheme: light) {
