--- a/src/style.css
+++ b/src/style.css
@@ -75,6 +75,31 @@ button:focus-visible {
   align-items: center;
   justify-content: center; /* 水平方向居中 */
 }
+.header {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  /* align-items: center; */
+  /* background-color: #1a1a1a; */
+  width: 100%;
+  height: 150px;
+}
+.headup {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: 90px;
+  background-color: #f48181;
+}
+.headown{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: 60px;
+  /* background-color: #9eff30; */
+}
 
 @media (prefers-color-scheme: light) {
   :root {
