--- a/src/style.css
+++ b/src/style.css
@@ -18,6 +18,7 @@ a {
   color: #646cff;
   text-decoration: inherit;
 }
+
 a:hover {
   color: #535bf2;
 }
@@ -34,9 +35,11 @@ h1 {
   font-size: 3.2em;
   line-height: 1.1;
 }
-.aside{
+
+.aside {
   height: 100vh;
 }
+
 button {
   /* border-radius: 8px; */
   border: 1px solid transparent;
@@ -48,6 +51,7 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
+
 button:hover {
   border-color: #646cff;
 }
@@ -56,22 +60,26 @@ button:hover {
 .card {
   padding: 2em;
 }
+
 .loginCard {
   width: 20%;
 }
 
 #app {
   width: 100%;
-  height: 776px;
+  height: 100vh;
 }
+
 .container {
   width: 100%;
   height: 776px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center; /* 水平方向居中 */
+  justify-content: center;
+  /* 水平方向居中 */
 }
+
 .header {
   display: flex;
   justify-content: space-between;
@@ -81,6 +89,7 @@ button:hover {
   width: 100%;
   height: 150px;
 }
+
 .headup {
   display: flex;
   justify-content: space-between;
@@ -89,7 +98,8 @@ button:hover {
   height: 90px;
   background-color: #f48181;
 }
-.headown{
+
+.headown {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -97,14 +107,17 @@ button:hover {
   height: 60px;
   /* background-color: #9eff30; */
 }
+
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
     background-color: #ffffff;
   }
+
   a:hover {
     color: #747bff;
   }
+
   button {
     background-color: #f9f9f9;
   }
